adds avatars
